--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,21 @@ repositories {
 }
 
 dependencies {
+
+	// database
+	runtimeOnly 'com.h2database:h2:2.1.214'
+
+	// jpa
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.3'
+
+	// web
 	implementation 'org.springframework.boot:spring-boot-starter'
+
+	// lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	// test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
