--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.2'
 
 	// database
-	runtimeOnly 'com.h2database:h2:2.1.214'
+	implementation 'mysql:mysql-connector-java:8.0.28'
 
 	// jpa
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.3'
