--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,12 @@ dependencies {
 	// jpa
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.3'
 
+	// jwt
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
+	// security
+	implementation 'org.springframework.boot:spring-boot-starter-security:2.7.2'
+
 	// web
 	implementation 'org.springframework.boot:spring-boot-starter'
 
