--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 
 	// database
 	implementation 'mysql:mysql-connector-java:8.0.28'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 	// jpa
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.3'
