--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,18 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url:
-    username:
-    password:
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  redis:
+    host: ${REDIS_HOST}
+    port: ${REDIS_PORT}
+
+  jwt:
+    key: ${JWT_KEY}
+
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
