--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,6 @@ dependencies {
 
 	// security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
 	// web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -43,6 +42,8 @@ dependencies {
 	// lombok
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
 
 	// test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.3'
