--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,11 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
+	// swagger
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
+
+	// smtp
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
 	// test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.3'
