--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,21 +5,29 @@ spring:
     password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-  jpa:
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-    hibernate:
-      ddl-auto: update
-
-  jackson:
-    property-naming-strategy: SNAKE_CASE
-
   redis:
-    port: ${REDIS_PORT}
     host: ${REDIS_HOST}
+    port: ${REDIS_PORT}
 
-jwt:
-  key: ${JWT_KEY}
-  live:
-    atk: ${ACCESSTOKEN_LIVE}
-    rtk: ${REFRESHTOKEN_LIVE}
+  mail:
+    host: ${MAIL_HOST}
+    port: ${MAIL_POST}
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
+      jwt:
+        key: ${JWT_KEY}
+        live:
+          atk: ${ACCESSTOKEN_LIVE}
+          rtk: ${REFRESHTOKEN_LIVE}
+
+      jpa:
+        hibernate:
+          ddl-auto: update
+        show-sql: true
