--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,9 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 	implementation 'org.springframework.cloud:spring-cloud-aws-autoconfigure:2.2.6.RELEASE'
 
+	// fcm
+	implementation 'com.google.firebase:firebase-admin:8.1.0'
+
 	// test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.3'
 }
